Cross reference R and Python approaches

--- a/ologit.ipynb
+++ b/ologit.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ologit test\n",
+    "based on https://www.statsmodels.org/devel/examples/notebooks/generated/ordinal_regression.html"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +111,7 @@
        "4  somewhat likely      0       0  2.53"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +135,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +155,7 @@
        "CategoricalDtype(categories=['unlikely', 'somewhat likely', 'very likely'], ordered=True, categories_dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +187,7 @@
        "  <th>Date:</th>              <td>Tue, 17 Dec 2024</td>  <th>                     </th>     <td> </td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>14:23:37</td>      <th>                     </th>     <td> </td>   \n",
+       "  <th>Time:</th>                  <td>17:24:06</td>      <th>                     </th>     <td> </td>   \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>       <td>   400</td>       <th>                     </th>     <td> </td>   \n",
@@ -220,7 +228,7 @@
        "\\textbf{Model:}                      &    OrderedModel    & \\textbf{  AIC:               } &     727.0   \\\\\n",
        "\\textbf{Method:}                     & Maximum Likelihood & \\textbf{  BIC:               } &     747.0   \\\\\n",
        "\\textbf{Date:}                       &  Tue, 17 Dec 2024  & \\textbf{                     } &             \\\\\n",
-       "\\textbf{Time:}                       &      14:23:37      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Time:}                       &      17:24:06      & \\textbf{                     } &             \\\\\n",
        "\\textbf{No. Observations:}           &          400       & \\textbf{                     } &             \\\\\n",
        "\\textbf{Df Residuals:}               &          395       & \\textbf{                     } &             \\\\\n",
        "\\textbf{Df Model:}                   &            3       & \\textbf{                     } &             \\\\\n",
@@ -248,7 +256,7 @@
        "Model:                   OrderedModel   AIC:                             727.0\n",
        "Method:            Maximum Likelihood   BIC:                             747.0\n",
        "Date:                Tue, 17 Dec 2024                                         \n",
-       "Time:                        14:23:37                                         \n",
+       "Time:                        17:24:06                                         \n",
        "No. Observations:                 400                                         \n",
        "Df Residuals:                     395                                         \n",
        "Df Model:                           3                                         \n",
@@ -264,7 +272,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +282,274 @@
     "\n",
     "res_log = mod_log.fit(method='bfgs', disp=False)\n",
     "res_log.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "      <th>std err</th>\n",
+       "      <th>z</th>\n",
+       "      <th>P&gt;|z|</th>\n",
+       "      <th>[0.025</th>\n",
+       "      <th>0.975]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pared</td>\n",
+       "      <td>1.0476</td>\n",
+       "      <td>0.266</td>\n",
+       "      <td>3.942</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.527</td>\n",
+       "      <td>1.569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>public</td>\n",
+       "      <td>-0.0586</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>-0.197</td>\n",
+       "      <td>0.844</td>\n",
+       "      <td>-0.642</td>\n",
+       "      <td>0.525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gpa</td>\n",
+       "      <td>0.6158</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>2.363</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>1.127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>unlikely/somewhat likely</td>\n",
+       "      <td>2.2035</td>\n",
+       "      <td>0.780</td>\n",
+       "      <td>2.827</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.676</td>\n",
+       "      <td>3.731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>somewhat likely/very likely</td>\n",
+       "      <td>0.7398</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>9.236</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.583</td>\n",
+       "      <td>0.897</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  coef  std err      z   P>|z|  [0.025  0.975]\n",
+       "0                        pared  1.0476    0.266  3.942   0.000   0.527   1.569\n",
+       "1                       public -0.0586    0.298 -0.197   0.844  -0.642   0.525\n",
+       "2                          gpa  0.6158    0.261  2.363   0.018   0.105   1.127\n",
+       "3     unlikely/somewhat likely  2.2035    0.780  2.827   0.005   0.676   3.731\n",
+       "4  somewhat likely/very likely  0.7398    0.080  9.236   0.000   0.583   0.897"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = res_log.summary().tables[1]\n",
+    "summary = pd.DataFrame(summary.data[1:], columns=summary.data[0])\n",
+    "summary = summary.astype({\"coef\":\"float64\",\"std err\":\"float64\", \"z\":\"float64\", \"[0.025\":\"float64\", \"0.975]\":\"float64\"})\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3.942\n",
+       "1   -0.197\n",
+       "2    2.363\n",
+       "3    2.827\n",
+       "4    9.236\n",
+       "Name: z, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary['z']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_values = summary['z']\n",
+    "p_values = 2 * (1 - stats.norm.cdf(abs(z_values)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "      <th>std err</th>\n",
+       "      <th>z</th>\n",
+       "      <th>P&gt;|z|</th>\n",
+       "      <th>[0.025</th>\n",
+       "      <th>0.975]</th>\n",
+       "      <th>p</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pared</td>\n",
+       "      <td>1.0476</td>\n",
+       "      <td>0.266</td>\n",
+       "      <td>3.942</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.527</td>\n",
+       "      <td>1.569</td>\n",
+       "      <td>0.000081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>public</td>\n",
+       "      <td>-0.0586</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>-0.197</td>\n",
+       "      <td>0.844</td>\n",
+       "      <td>-0.642</td>\n",
+       "      <td>0.525</td>\n",
+       "      <td>0.843828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gpa</td>\n",
+       "      <td>0.6158</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>2.363</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>1.127</td>\n",
+       "      <td>0.018128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>unlikely/somewhat likely</td>\n",
+       "      <td>2.2035</td>\n",
+       "      <td>0.780</td>\n",
+       "      <td>2.827</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.676</td>\n",
+       "      <td>3.731</td>\n",
+       "      <td>0.004699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>somewhat likely/very likely</td>\n",
+       "      <td>0.7398</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>9.236</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.583</td>\n",
+       "      <td>0.897</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  coef  std err      z   P>|z|  [0.025  \\\n",
+       "0                        pared  1.0476    0.266  3.942   0.000   0.527   \n",
+       "1                       public -0.0586    0.298 -0.197   0.844  -0.642   \n",
+       "2                          gpa  0.6158    0.261  2.363   0.018   0.105   \n",
+       "3     unlikely/somewhat likely  2.2035    0.780  2.827   0.005   0.676   \n",
+       "4  somewhat likely/very likely  0.7398    0.080  9.236   0.000   0.583   \n",
+       "\n",
+       "   0.975]         p  \n",
+       "0   1.569  0.000081  \n",
+       "1   0.525  0.843828  \n",
+       "2   1.127  0.018128  \n",
+       "3   3.731  0.004699  \n",
+       "4   0.897  0.000000  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary['p'] = p_values\n",
+    "summary"
    ]
   },
   {
