--- a/ologit.Rmd
+++ b/ologit.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "R Notebook"
+title: "ologit test"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+Based on https://stats.oarc.ucla.edu/r/dae/ordinal-logistic-regression/
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
 ```{r}
 require(foreign)
 require(ggplot2)
@@ -16,13 +15,36 @@ require(reshape2)
 
 ```{r}
 dat <- read.dta("https://stats.idre.ucla.edu/stat/data/ologit.dta")
+head(dat)
 ```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 ```{r}
+lapply(dat[, c("apply", "pared", "public")], table)
+```
+```{r}
+ftable(xtabs(~ public + apply + pared, data=dat))
+```
+```{r}
+ggplot(dat, aes(x=apply, y=gpa)) + 
+  geom_boxplot(size=.75) +
+  #geom_jitter(alpha = .5) +
+  facet_grid(pared ~ public, margins = TRUE) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust =1))
+```
+```{r}
+m <- polr(apply ~ pared + public + gpa, data = dat, Hess=TRUE)
+summary(m)
+```
+```{r}
+## store coefficients to calculate p value
+(ctable <- coef(summary(m)))
+```
+```{r}
+# calculate p values
+p <- pnorm(abs(ctable[, "t value"]), lower.tail=FALSE) * 2
 
+## combined table
+(ctable <- cbind(ctable, "p value" = p))
 ```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+
